update input font size to 16px to prevent zoom in on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ dialog {
 .todo-input {
   color: #2e5077;
   padding: 0.5rem;
+  font-size: 16px;
 }
 
 .todo-submit {
